feat: implement resume controller logic